Grid | Fix horizontal alignment

--- a/src/scss/components/grid/_grid.scss
+++ b/src/scss/components/grid/_grid.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   align-items: flex-start;
 }
 
